--- a/cs-340-activity-1-master/views/series.hbs
+++ b/cs-340-activity-1-master/views/series.hbs
@@ -21,7 +21,7 @@
 					<td>{{this.writers}}</td>
 					<td>{{this.num_seasons}}</td>
 					<td>{{this.end_date}}</td>
-					<td>{{this.network}}</td>
+					<td>{{this.nName}}</td>
                 </tr>
             {{/each}}
         {{else}}
