Added searches and functions
Added search for actors and reviews, added average rating for series

--- a/cs-340-activity-1-master/views/reviews-add.hbs
+++ b/cs-340-activity-1-master/views/reviews-add.hbs
@@ -17,7 +17,14 @@
         <p>
             <label for="Rating ID">Rating ID:</label>
             <input type="number" class="required" min=1 max=999 class="required" name="rID" id="rID" title="rID should be numeric">
- 
+ 	    </p>
+        <p>
+            <label for="Episode Number">Episode Number:</label>
+            <input type="number" class="required" min=1 max=999 class="required" name="ep_num" id="ep_num" title="ep_num should be numeric">
+ 	    </p>
+        <p>
+            <label for="Series ID">Series ID:</label>
+            <input type="number" class="required" min=1 max=999 class="required" name="sID" id="sID" title="sID should be numeric">
     </fieldset>
 
     <p>
