--- a/cs-340-activity-1-master/views/partials/header.hbs
+++ b/cs-340-activity-1-master/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <header>
-    Quinn Thompson - <em>Welcome <span id="username">{{ username }}</span>!</em>
+    Rotten Potatoes
 </header>
 <nav>
     <ul>
