--- a/cs-340-activity-1-master/assets/styles.css
+++ b/cs-340-activity-1-master/assets/styles.css
@@ -1,12 +1,12 @@
 header {
 
-	height: 20px;
+	height: 30px;
 	background-color: white;
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
 	padding: 20px 20px 20px 20px;
-	font-size: 1.5em;
+	font-size: 2.5em;
 
 }
 header > h1 {
@@ -297,6 +297,31 @@ table#t01 th {
   background-color: orange;
   color: orange;
 }
+/*=========================================*/
+table#t02 {
+	width:1500px;
+	line-height:200px;
+	text-align: center;
+}
+
+table#t02 tr:nth-child(even) {
+  background-color: #ddd4fa;
+}
+
+table#t02 tr:nth-child(odd) {
+  background-color: #fff;
+}
+
+table#t02 th {
+  background-color: #907fc7;
+  color: white;
+}
+
+#t02  tr:hover {
+  background-color: orange;
+  color: orange;
+}
+/*=========================================*/
 caption {
   font-weight: bold;
   padding: 0.5em 0 0.5em 0;
