--- a/cs-340-activity-1-master/views/network-search.hbs
+++ b/cs-340-activity-1-master/views/network-search.hbs
@@ -1,7 +1,7 @@
 <h2>{{message}}</h2>
 <form method="post" id="addForm">
     <fieldset>
-        <legend>Part Info:</legend>
+        <legend>Review Info:</legend>
         <p>
             <label for="Network Name">Network Name:</label>
             <input type="text" class="required" name="nName" id="nName">
