--- a/cs-340-activity-1-master/views/actors-search.hbs
+++ b/cs-340-activity-1-master/views/actors-search.hbs
@@ -1,7 +1,7 @@
 <h2>{{message}}</h2>
 <form method="post" id="addForm">
     <fieldset>
-        <legend>Part Info:</legend>
+        <legend>Actor Info:</legend>
         <p>
             <label for="Actors Name">Actors Name:</label>
             <input type="text" class="required" name="name" id="name">
