--- a/cs-340-activity-1-master/views/reviews-add.hbs
+++ b/cs-340-activity-1-master/views/reviews-add.hbs
@@ -1,7 +1,7 @@
 <h2>{{message}}</h2>
 <form method="post" id="addForm">
     <fieldset>
-        <legend>Part Info:</legend>
+        <legend>Review Info:</legend>
 		<p>
             <label for="User Name">User Name:</label>
             <input type="text" name="user_name" id="user_name">
