--- a/cs-340-activity-1-master/views/series-search.hbs
+++ b/cs-340-activity-1-master/views/series-search.hbs
@@ -1,7 +1,7 @@
 <h2>{{message}}</h2>
 <form method="post" id="addForm">
     <fieldset>
-        <legend>Part Info:</legend>
+        <legend>Series Info:</legend>
         <p>
             <label for="Series Name">Series Name:</label>
             <input type="text" class="required" name="title" id="title">
