--- a/cs-340-activity-1-master/assets/styles.css
+++ b/cs-340-activity-1-master/assets/styles.css
@@ -61,7 +61,7 @@ nav li:nth-last-child(-n+5){
 nav li a {
     display: block;
     color: white;
-    text-align: center;
+    text-align: left;
     padding: 10px 16px;
     text-decoration: none;
 }
