--- a/cs-340-activity-1-master/views/reviews-add.hbs
+++ b/cs-340-activity-1-master/views/reviews-add.hbs
@@ -8,7 +8,7 @@
         </p>
         <p>
             <label for="Rating">Rating:</label>
-            <input type="number" min=1 max=10 class="required" name="rating" id="rating" title="rating should be numeric">
+            <input type="number" min=1 max=10 class="required" name="rating" maxlength="500" id="rating" title="rating should be numeric">
         </p>
         <p>
             <label for="Description">Desc:</label>
