Average Rating Fix

--- a/cs-340-activity-1-master/views/series-avrg-rat-res.hbs
+++ b/cs-340-activity-1-master/views/series-avrg-rat-res.hbs
@@ -11,7 +11,7 @@
             {{#each rows }}
                 <tr>
                     <td>{{this.title}}</td>
-                    <td>{{this.rating}}</td>
+                    <td>{{this.AverageRating}}</td>
                 </tr>
             {{/each}}
         {{else}}
